--- a/src/app/common/components/chat/chat-item/chat-item.component.scss
+++ b/src/app/common/components/chat/chat-item/chat-item.component.scss
@@ -7,56 +7,77 @@ p {
   margin-bottom: 0;
 }
 
-.chat {
-  &__card {
-    display: flex;
+.card {
+  display: flex;
 
-    height: 100%;
-    padding: 0;
-  }
-  &__name {
-    font-size: 2.8rem;
-  }
+  height: 100%;
+  padding: 0;
+}
+.name {
+  font-size: 2.8rem;
+}
 
-  &__info {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
-    padding: 1rem 0;
+  position: relative;
 
-    width: calc(100% - 9rem);
-    margin: 0 auto;
-  }
+  padding: 1rem 0;
 
-  &__last-message {
-    // display "..." if overflow
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  width: calc(100% - 9rem);
+  margin: 0 auto;
+}
 
-    font-weight: 400;
-    font-size: 2.4rem;
-    line-height: 3rem;
-  }
+.last-message {
+  // display "..." if overflow
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
-  &__image-wrapper {
-    display: flex;
-    justify-content: center;
+  font-weight: 400;
+  font-size: 2.4rem;
+  line-height: 3rem;
+}
 
-    padding: 0.5rem;
+.image-wrapper {
+  display: flex;
+  justify-content: center;
 
-    height: 8rem;
-    width: 8rem;
-  }
+  padding: 0.5rem;
 
-  &__image {
-    display: block;
+  height: 8rem;
+  width: 8rem;
+}
 
-    border-radius: 50%;
+.image {
+  display: block;
 
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
-  }
+  border-radius: 50%;
+
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.not-viewed-messages-badge {
+  // at right and centered vertical
+  position: absolute;
+  right: 1vw;
+  top: 50%;
+  transform: translateY(-50%);
+
+  // round
+  height: 4rem;
+  width: 4rem;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.not-viewed-messages-text {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
 }
