--- a/src/app/common/components/buttons/buttons/account-actions/account-actions.component.scss
+++ b/src/app/common/components/buttons/buttons/account-actions/account-actions.component.scss
@@ -3,6 +3,8 @@
   height: 3.6rem;
   width: 3.6rem;
 
+  position: relative;
+
   &__image {
     display: block;
 
@@ -15,4 +17,42 @@
     /* Round */
     border-radius: 50%;
   }
+
+  &__badge-wrapper {
+    position: absolute;
+
+    // disable expanding button hit box
+    pointer-events: none;
+
+    // display round
+    height: 2rem;
+    width: 2rem;
+    overflow: hidden;
+    border-radius: 50%;
+  }
+
+  &__badge-inner {
+    display: flex;
+    height: 100%;
+
+    justify-content: center;
+    align-items: center;
+
+    font-size: 1.5rem;
+  }
+}
+
+.badge-wrapper {
+  &--at-toggler {
+    top: -0.5rem;
+    right: -0.5rem;
+  }
+  &--at-menu {
+    top: 0.2rem;
+    left: 3rem;
+  }
+}
+
+.chats-menu-link-container {
+  position: relative;
 }
