--- a/src/app/pages/chat-pages/concrete-chat/messages-box/messages-box.component.scss
+++ b/src/app/pages/chat-pages/concrete-chat/messages-box/messages-box.component.scss
@@ -21,7 +21,7 @@
   bottom: 0;
 
   // vertical scroll
-  overflow-y: auto;
+  overflow: auto;
 
   width: 100%;
   max-height: 100%;
@@ -37,8 +37,9 @@
 }
 
 .message {
-  padding: 0.5rem 0;
   max-width: 80%;
+
+  padding: 0.5rem 0;
 
   &__outgoing {
     margin-left: auto;
