--- a/src/app/common/components/chat/message/chat-text-message.component.scss
+++ b/src/app/common/components/chat/message/chat-text-message.component.scss
@@ -9,7 +9,7 @@ p {
 .message-body {
   border-radius: 0.6rem;
   overflow: hidden;
-  max-width: fit-content;
+  width: fit-content;
 }
 
 .inner-content {
