css fix: aspect ratio bad support

--- a/src/app/pages/chat-pages/concrete-chat/top-navbar/top-navbar.component.scss
+++ b/src/app/pages/chat-pages/concrete-chat/top-navbar/top-navbar.component.scss
@@ -9,13 +9,13 @@
 
   &__image {
     display: block;
-    height: 90%;
-
+    
     margin: 0 1rem;
-
+    
+    // round
     border-radius: 50%;
-
-    aspect-ratio: 1;
+    height: 5rem;
+    width: 5rem;
     object-fit: cover;
   }
   &__chat-name {
