--- a/src/app/common/components/buttons/buttons/account-actions/account-actions.component.scss
+++ b/src/app/common/components/buttons/buttons/account-actions/account-actions.component.scss
@@ -9,12 +9,9 @@
     display: block;
 
     /* Square */
-    aspect-ratio: 1;
-    height: 100%;
-    width: auto;
+    height: 3.8rem;
+    width: 3.8rem;
     object-fit: cover;
-
-    /* Round */
     border-radius: 50%;
   }
 
