--- a/src/app/common/components/core/product-card/product-card.component.scss
+++ b/src/app/common/components/core/product-card/product-card.component.scss
@@ -12,18 +12,23 @@ $border-size: 12px;
   width: 100%;
 
   &__image-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    position: relative;
+    // square
+    &::after {
+      content: "";
+      padding-top: 100%;
+      display: block;
+    }
   }
+
   &__image-content {
+    position: absolute;
     border-top-left-radius: $border-size;
     border-top-right-radius: $border-size;
 
     display: block;
     width: 100%;
     height: 100%;
-    aspect-ratio: 1;
     object-fit: cover;
   }
 
