--- a/src/app/common/components/dialogs/confirm/confirm-dialog.component.html
+++ b/src/app/common/components/dialogs/confirm/confirm-dialog.component.html
@@ -1,5 +1,5 @@
 <h2 class="title" mat-dialog-title>{{ confirmationText }}</h2>
-<mat-dialog-content class="content">{{ hint }}</mat-dialog-content>
+<mat-dialog-content class="content wrap-text">{{ hint }}</mat-dialog-content>
 <mat-dialog-actions class="actions" align="center">
   <button mat-raised-button color="primary" [mat-dialog-close]="false">No</button>
   <button mat-raised-button color="accent" [mat-dialog-close]="true">Yes</button>
