--- a/src/app/app/navbar/navbar.component.html
+++ b/src/app/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <common-home-link></common-home-link>
   <nav aria-label="left navigation">
     <ul class="list list-horizontal">
-      <li class="link-containter">
+      <li class="link-containter hidable">
         <common-products-link></common-products-link>
       </li>
     </ul>
