--- a/src/app/app/navbar/navbar.component.scss
+++ b/src/app/app/navbar/navbar.component.scss
@@ -20,6 +20,12 @@
   align-items: center;
 }
 
+.hidable {
+  @media screen and (max-width: 35rem) {
+    display: none;
+  }
+}
+
 .theme-toggler {
   margin-right: 1rem;
 }
