increase bottom navbar of concrete chat

--- a/src/app/pages/chat-pages/concrete-chat/bottom-navbar/bottom-navbar.component.scss
+++ b/src/app/pages/chat-pages/concrete-chat/bottom-navbar/bottom-navbar.component.scss
@@ -1,7 +1,7 @@
 .navbar {
   display: flex;
   justify-content: space-between;
-
+  min-height: 7rem;
   height: fit-content;
 }
 .message-container {
