add write message feature

--- a/src/app/pages/concrete-product/author/author.component.html
+++ b/src/app/pages/concrete-product/author/author.component.html
@@ -15,6 +15,7 @@
   <button
     class="author-message"
     *ngIf="canWriteMessage()"
+    (click)="onWriteMessage()"
     mat-raised-button
     color="accent"
     aria-label="Write message to author"
