add chat deleting support

--- a/src/app/pages/chat-pages/concrete-chat/top-navbar/top-navbar.component.html
+++ b/src/app/pages/chat-pages/concrete-chat/top-navbar/top-navbar.component.html
@@ -9,5 +9,7 @@
       [alt]="'avatar of ' + this.chat.chatName"
     />
     <h3 class="navbar__chat-name">{{ chat.chatName }}</h3>
+    <span class="navbar-spacer"></span>
+    <concrete-chat-page__top-navbar-menu></concrete-chat-page__top-navbar-menu>
   </mat-toolbar>
 </ng-template>
