chrome placeholder color fix

--- a/src/app/pages/chat-pages/concrete-chat/bottom-navbar/bottom-navbar.component.scss
+++ b/src/app/pages/chat-pages/concrete-chat/bottom-navbar/bottom-navbar.component.scss
@@ -16,9 +16,23 @@
   background-color: unset;
   border: unset;
   outline: unset;
-  color: unset;
   overflow: hidden;
+  background-color: unset;
+  color: unset;
 
   font-size: 2rem;
   width: 100%;
+  min-height: 3rem;
+}
+
+// fix placeholder chrome color
+:host ::ng-deep {
+  ::-webkit-input-placeholder,
+  ::-moz-placeholder,
+  ::-ms-placeholder,
+  ::placeholder,
+  .message-input {
+    color: white;
+    opacity: 0.7;
+  }
 }
