--- a/src/app/pages/user/view-user/user-profile/user-profile.component.scss
+++ b/src/app/pages/user/view-user/user-profile/user-profile.component.scss
@@ -9,9 +9,10 @@
 }
 
 .avatar {
-  display: block;
-  width: 100%;
-  height: 100%;
+  position: absolute;
+
+  width: 95%;
+  height: 95%;
 
   object-fit: cover;
 
@@ -19,11 +20,21 @@
   box-shadow: 0 0 10px rgba(black, 0.5);
 }
 
+.avatar-container {
+  display: flex;
+  justify-content: center;
+  height: fit-content;
+}
+
 .avatar-wrapper {
   position: relative;
 
-  padding: 1rem;
-  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  height: 100%;
+  width: 100%;
 
   max-height: 50rem;
   max-width: 50rem;
@@ -31,13 +42,15 @@
   // square
   &::after {
     content: "";
-    padding-bottom: 100%;
     display: block;
+    padding-bottom: 100%;
   }
 }
 
 .edit-user-under-avatar {
   position: absolute;
+  z-index: 1;
+
   top: 3%;
   right: 15%;
 }
