add about section

--- a/src/app/pages/home/home-page.component.html
+++ b/src/app/pages/home/home-page.component.html
@@ -1,1 +1,6 @@
-<home-page-header></home-page-header>
+<header>
+  <home-page__header></home-page__header>
+</header>
+<section>
+  <homepage__about></homepage__about>
+</section>
