--- a/src/app/pages/chat-pages/concrete-chat/top-navbar/top-navbar.component.html
+++ b/src/app/pages/chat-pages/concrete-chat/top-navbar/top-navbar.component.html
@@ -3,11 +3,7 @@
     <button mat-icon-button (click)="onBackClick()">
       <mat-icon>arrow_back</mat-icon>
     </button>
-    <img
-      class="navbar__image"
-      [src]="this.chat.chatImage"
-      [alt]="'avatar of ' + this.chat.chatName"
-    />
+    <img class="navbar__image" [src]="getChatImage()" [alt]="'avatar of ' + this.chat.chatName" />
     <h3 class="navbar__chat-name">{{ chat.chatName }}</h3>
     <span class="navbar-spacer"></span>
     <concrete-chat-page__top-navbar-menu></concrete-chat-page__top-navbar-menu>
