bugfix: invalid progress bar mode

--- a/src/app/pages/manage-product/update-product/update-product.component.html
+++ b/src/app/pages/manage-product/update-product/update-product.component.html
@@ -31,7 +31,7 @@
       [initialFiles]="this.imagesSnapshot"
       maxFileSize="10MB"
     ></common-image-drag-and-drop>
-    <mat-progress-bar *ngIf="loading" class="progress-bar" mode="query"></mat-progress-bar>
+    <mat-progress-bar *ngIf="loading" class="progress-bar" mode="indeterminate"></mat-progress-bar>
     <div class="form-actions">
       <button
         [disabled]="this.loading"
