--- a/src/app/pages/chat-pages/concrete-chat/top-navbar/top-navbar.component.html
+++ b/src/app/pages/chat-pages/concrete-chat/top-navbar/top-navbar.component.html
@@ -3,8 +3,10 @@
     <button mat-icon-button (click)="onBackClick()">
       <mat-icon>arrow_back</mat-icon>
     </button>
-    <img class="navbar__image" [src]="getChatImage()" [alt]="'avatar of ' + this.chat.chatName" />
-    <h3 class="navbar__chat-name">{{ chat.chatName }}</h3>
+    <a class="chat-link" [routerLink]="getLinkToOtherUser()">
+      <img class="navbar__image" [src]="getChatImage()" [alt]="'avatar of ' + this.chat.chatName" />
+      <h3 class="navbar__chat-name">{{ chat.chatName }}</h3>
+    </a>
     <span class="navbar-spacer"></span>
     <concrete-chat-page__top-navbar-menu></concrete-chat-page__top-navbar-menu>
   </mat-toolbar>
