--- a/src/app/pages/products/products-page.component.html
+++ b/src/app/pages/products/products-page.component.html
@@ -17,7 +17,7 @@
 
     <common-products-container
       class="card-container"
-      [products]="(this.products$ | async) ?? []"
+      [products]="products"
     ></common-products-container>
   </div>
   <common-paginator
