--- a/src/app/pages/products/product-page.component.scss
+++ b/src/app/pages/products/product-page.component.scss
@@ -2,21 +2,37 @@
 
 :host {
   display: block;
-  min-height: $content-height;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+
+  flex-grow: 1;
+  padding-top: 1rem;
+
+  min-height: calc($content-height - 6.4rem);
 }
 
 .paginator {
   max-width: fit-content;
-  margin: 2rem auto;
+
+  margin: 1rem auto;
 }
 
 .search-container {
   display: flex;
-  margin: 1rem 0;
   height: 6.6rem;
+}
+.card-container {
+  margin-top: 1rem;
 }
 
 .filters-toggler {
   margin-right: 0.5rem;
   min-width: fit-content;
+}
+
+.spacer {
+  flex: 1 1;
 }
