add more styles to login, register dialogs

--- a/src/app/common/components/dialogs/register/register-dialog.component.html
+++ b/src/app/common/components/dialogs/register/register-dialog.component.html
@@ -1,12 +1,15 @@
 <div class="component-root">
   <mat-icon class="big-icon">account_box</mat-icon>
   <h2 class="dialog-title" mat-dialog-title>Create account</h2>
+  <p class="username-info">Username should be lowercase and start with letter</p>
   <form class="forms-container" (submit)="this.onRegister()">
-    <mat-error *ngIf="this.requestError">{{ requestError }}</mat-error>
+    <mat-error class="error" *ngIf="this.requestError">{{ requestError }}</mat-error>
 
     <common-username-form-field [(model)]="usernameField"></common-username-form-field>
 
-    <mat-error *ngIf="this.isPasswordsMatch() === false">Passwords don't match</mat-error>
+    <mat-error class="error" *ngIf="needDisplayPasswordsNotMatch()">
+      Passwords don't match
+    </mat-error>
 
     <common-password-form-field [(model)]="passwordField"></common-password-form-field>
 
