--- a/src/app/common/components/dialogs/login/login-dialog.component.html
+++ b/src/app/common/components/dialogs/login/login-dialog.component.html
@@ -1,7 +1,7 @@
 <mat-icon class="big-icon">account_circle</mat-icon>
 <h2 class="dialog-title" mat-dialog-title>Login</h2>
 <p class="username-info">Username should be lowercase and start with letter</p>
-<mat-error *ngIf="requestError">{{ requestError }}</mat-error>
+<mat-error class="error" *ngIf="requestError">{{ requestError }}</mat-error>
 <div class="forms-container">
   <form (submit)="onLogin()">
     <common-username-form-field [(model)]="usernameField"></common-username-form-field>
