--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,11 @@
 *,
 *:before,
 *:after {
+  padding: 0;
+  margin: 0;
+  border: 0;
+
+  white-space: normal;
   box-sizing: border-box;
 }
 
@@ -25,6 +30,7 @@ body {
 
 * {
   font-size: 1.8rem;
+  line-height: 1.2;
 }
 
 img {
